# currency/server/currency.go
@@ -4,22 +4,30 @@ import (
 	"context"
 
 	"github.com/hashicorp/go-hclog"
+	"github.com/marksarchi/go-service/currency/data"
 	protos "github.com/marksarchi/go-service/currency/protos/currency"
 )
 
 // Currency is a gRPC server it implements the methods defined by the CurrencyServer interface
 type Currency struct {
-	log hclog.Logger
+	rates *data.ExchangeRates
+	log   hclog.Logger
 }
 
 // NewCurrency creates a new Currency server
-func NewCurrency(l hclog.Logger) *Currency {
-	return &Currency{l}
+func NewCurrency(r *data.ExchangeRates, l hclog.Logger) *Currency {
+	return &Currency{r, l}
 }
 
 // GetRate implements the CurrencyServer GetRate method and returns the currency exchange rate
 // for the two given currencies.
 func (c *Currency) GetRate(ctx context.Context, rr *protos.RateRequest) (*protos.RateResponse, error) {
 	c.log.Info("Handle request for GetRate", "base", rr.GetBase(), "dest", rr.GetDestination())
-	return &protos.RateResponse{Rate: 0.5}, nil
+
+	rate, err := c.rates.GetRate(rr.GetBase().String(), rr.GetDestination().String())
+
+	if err != nil {
+		return nil, err
+	}
+	return &protos.RateResponse{Rate: rate}, nil
 }
