# product-api/handlers/get.go
@@ -1,10 +1,11 @@
 package handlers
 
 import (
+	//"context"
 	"net/http"
+
+	//protos "github.com/marksarchi/go-service/currency/protos/currency"
 	"github.com/sarchimark/go-service/product-api/data"
-	"context"
-	protos "github.com/marksarchi/go-service/currency/protos/currency"
 )
 
 // swagger:route GET /products products listProducts
@@ -14,15 +15,21 @@ import (
 
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("[DEBUG] get all records")
-	rw.Header().Add("Content-Type","application/json")
+	p.l.Debug("Get all records")
+	rw.Header().Add("Content-Type", "application/json")
 
-	prods := data.GetProducts()
+	cur := r.URL.Query().Get("currency")
 
-	err := data.ToJSON(prods, rw)
+	prods, err := p.productDB.GetProducts(cur)
+	if err != nil {
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message:err.Error()},rw)
+	}
+
+	err = data.ToJSON(prods, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.l.Error("Unable to serialize product","error", err)
 	}
 }
 
@@ -34,57 +41,37 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 
 // ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
+
 	id := getProductID(r)
+	cur := r.URL.Query().Get("currency")
+	
 
-	p.l.Println("[DEBUG] get record id", id)
+	p.l.Debug("Get record id","id", id)
 
-	prod, err := data.GetProductByID(id)
+	prod, err := p.productDB.GetProductByID(id,cur)
 
 	switch err {
 	case nil:
 
 	case data.ErrProductNotFound:
-		p.l.Println("[ERROR] fetching product", err)
+		p.l.Error("Unable to fetch product","error", err)
 
 		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	default:
-		p.l.Println("[ERROR] fetching product", err)
+		p.l.Error("Unable to fetch  product","error", err)
 
 		rw.WriteHeader(http.StatusInternalServerError)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
-	 
-	//get exchange rate
-    rr:= &protos.RateRequest{
-		Base : protos.Currencies(protos.Currencies_value["EUR"]),
-		Destination: protos.Currencies(protos.Currencies_value["GBP"]),
-	
-	}
-	
 
-	resp, err := p.cc.GetRate(context.Background(),rr)
-	p.l.Println("[DEBUG] transaction rate", resp.Rate) 
-
-	rate := resp.Rate
-	p.l.Println("[DEBUG] Rate=", rate)
-
-	_rate := resp.GetRate()
-	p.l.Println("[DEBUG] GetRate()", _rate)
-
-	if err!= nil {
-		p.l.Println("[Error] getting new rate" )
-		data.ToJSON(&GenericError{Message:err.Error()},rw)
-		return
-	}
-	prod.Price = prod.Price * resp.GetRate()
-	p.l.Println("[DEBUG] get record price", prod.Price)
 
 	err = data.ToJSON(prod, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.l.Error("Unable to serialize product","error", err)
 	}
 }
