# product-api/swagger.yaml
@@ -9,7 +9,7 @@ definitions:
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/sarchimark/product-api/handlers
+    x-go-package: github.com/sarchimark/go-service/product-api/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
@@ -31,7 +31,7 @@ definitions:
         x-go-name: Name
       price:
         description: the price for the product
-        format: float
+        format: double
         minimum: 0.01
         type: number
         x-go-name: Price
@@ -45,7 +45,7 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/sarchimark/product-api/data
+    x-go-package: github.com/sarchimark/go-service/product-api/data
   ValidationError:
     description: ValidationError is a collection of validation error messages
     properties:
@@ -55,7 +55,7 @@ definitions:
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/sarchimark/product-api/handlers
+    x-go-package: github.com/sarchimark/go-service/product-api/handlers
 info:
   description: Documentation for Product API
   title: of Product API
@@ -65,6 +65,14 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is return in GBP.
+        in: query
+        name: Currency
+        required: true
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -137,6 +145,13 @@ paths:
       description: Return a single product from the database
       operationId: listSingleProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is return in GBP.
+        in: query
+        name: Currency
+        required: true
+        type: string
       - description: The id of the product for which the operation relates
         format: int64
         in: path
